# pres

./: .release-please-manifest.json  AGENTS.md  Cargo.toml  LICENSE  README.md  docs.md  mise.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
crates/pres/: CHANGELOG.md  Cargo.toml
crates/pres/src/: app.rs  main.rs  parser.rs  renderer.rs  theme.rs  ui.rs
