[package]
name = "pres"
version = "0.0.0"
edition = "2024"
description = "A terminal markdown slide presenter"
license = "MIT"
repository = "https://github.com/dvjn/pres"
readme = "../../README.md"
keywords = ["presentation", "slides", "markdown", "terminal", "tui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
notify = "7"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "plist-load"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-fancy"] }
unicode-width = "0.2.0"
